deployment/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-webapp
  name: gitops-webapp-svc
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 5000
  selector:
    app: gitops-webapp
