deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-webapp
  labels:
    app: gitops-webapp
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webapp.prod.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitops-webapp-svc
            port:
              number: 80
